--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div class="container">
+	<div class="holder">
         <div id="box1">1</div>
         <div id="box2">2</div>
         <div id="box3">3</div>
